--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,13 @@ section p{
 	clear: right;
 	padding: 10px;		 
 }
+
+@media (min-width: 992px) {
+	.main-content{
+		display: flex;	
+	}
+
+	section{
+		width: 33%;
+	}
+}
