--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,15 @@ section p{
 		width: 97.5%;
 	}
 }
+
+@media only screen and (max-width: 767px) {
+	section{
+		width: 100%;
+		
+	}
+
+	.container{
+		margin: auto;
+  		width: 75%;
+	}
+}
